<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/dark_gray">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="@dimen/size_text_20sp"
            android:fontFamily="@font/regular"
            android:text="@string/app_name"
            android:textColor="@color/black"
            android:textSize="@dimen/size_text_50sp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/size_margin_20dp"
            android:text="@string/sign_in_subtitle"
            android:textSize="@dimen/size_text_25sp" />

        <EditText
            android:id="@+id/edtUsername"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/size_margin_20dp"
            android:autofillHints=""
            android:background="@drawable/custom_edit_text"
            android:gravity="center_vertical"
            android:hint="@string/username"
            android:paddingStart="@dimen/size_padding_13dp"
            android:textColorHint="@color/grey"
            android:textSize="@dimen/size_text_20sp"
            tools:ignore="RtlSymmetry,TextFields" />

        <EditText
            android:id="@+id/edtPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/size_margin_20dp"
            android:autofillHints=""
            android:background="@drawable/custom_edit_text"
            android:gravity="center_vertical"
            android:hint="@string/txt_password"
            android:inputType="textPassword"
            android:paddingStart="@dimen/size_padding_13dp"
            android:textColorHint="@color/grey"
            android:textSize="@dimen/size_text_20sp"
            tools:ignore="RtlSymmetry" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginEnd="@dimen/size_margin_25dp"
            android:text="@string/forgot_pass"
            android:textSize="@dimen/size_text_15sp" />

        <Button
            android:id="@+id/btnLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/size_margin_40dp"
            android:background="@drawable/custom_btn"
            android:paddingStart="@dimen/size_padding_50dp"
            android:paddingEnd="@dimen/size_padding_50dp"
            android:text="@string/btn_log_in"
            android:textSize="@dimen/size_text_20sp"
            android:textStyle="bold" />

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/size_margin_25dp">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:orientation="horizontal"
                tools:ignore="UselessParent">

                <TextView
                    android:id="@+id/tvForgot"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/forgot"
                    android:textColor="@color/grey"
                    android:textSize="@dimen/size_text_15sp" />

                <TextView
                    android:id="@+id/tvRegister"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/size_margin_10dp"
                    android:text="@string/register"
                    android:textColor="@color/black"
                    android:textSize="@dimen/size_text_17sp"
                    android:textStyle="bold" />
            </LinearLayout>
        </RelativeLayout>
</RelativeLayout>