<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/tvName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/blue"
        android:padding="@dimen/size_padding_10dp"
        android:text="@string/username"
        android:textSize="@dimen/size_text_30sp" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/conversationRec"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/layout_bottom"
        android:layout_below="@+id/tvName"
        android:layout_marginBottom="@dimen/size_margin_20dp"
        android:padding="@dimen/size_padding_15dp" />

    <RelativeLayout
        android:id="@+id/layout_bottom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:padding="@dimen/size_padding_10dp">

        <EditText
            android:id="@+id/editMess"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/size_margin_10dp"
            android:layout_toStartOf="@+id/imgLib"
            android:autofillHints=""
            android:hint="@string/input_mess"
            android:inputType=""
            android:textSize="@dimen/size_text_20sp" />

        <ImageView
            android:id="@+id/imgLib"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/size_margin_10dp"
            android:layout_marginEnd="@dimen/size_margin_10dp"
            android:layout_toStartOf="@+id/btnSend"
            android:background="@color/black"
            android:contentDescription="@string/des_img"
            android:src="@drawable/library" />

        <Button
            android:id="@+id/btnSend"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:text="@string/send_mess" />

    </RelativeLayout>

</RelativeLayout>